frontend/src/PitchArtWizard/TranscribeAudio.css
.metilda-audio-analysis-form {
    margin-left: 16px;
}

.metilda-audio-analysis-layout {
    width: 1016px;
}

.metilda-audio-analysis-controls {

}

.metilda-audio-analysis {

}

.metilda-audio-analysis-image-container {
    margin-bottom: 8px;
}

.metilda-audio-analysis-image {
    border: 1px solid black;
    width: 100%;
}

.metilda-audio-analysis-input {
    text-align: left;
}

.metilda-checkbox-label {
    margin-right: 16px;
}

.metilda-audio-analysis-image-col-1,
.metilda-audio-analysis-image-col-2,
.metilda-audio-analysis-image-col-3 {
    border: 1px solid black;
    height: 32px;
    margin-top: 8px;
    margin-bottom: 8px;
}

.metilda-audio-analysis-image-col-1 {
    width: 12.5%;
    display: flex;
    align-items: center;
    justify-content: center;
    background: lightgray;
}

.metilda-audio-analysis-image-col-2 {
    width: 77.5%;
}

.metilda-audio-analysis-image-col-3 {
    width: 10%;
    background: lightgray;
}

.metilda-control-container {
    display: flex;
    align-items: center;
}

.metilda-audio-analysis-image-col-2.metilda-audio-analysis-letter-container {
    display: flex;
}

.metilda-transcribe-letter {
    position: relative;
    background: lightblue;
    outline: 1px solid black;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
}

.metilda-transcribe-letter.selected {
    background: lightyellow !important;
}

.metilda-audio-analysis-image-loading,
.metilda-audio-analysis-image-default {
    width: 653px;
    height: 443px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid black;
}

.metilda-audio-analysis-image-loading .preloader-wrapper.big {
    width: 160px;
    height: 160px;
}

.metilda-audio-analysis-pitch-art {
    margin-left: 48px;
}

.m-r-16 {
    margin-right: 16px;
}

.no-border {
    border: none !important;
}

.vert-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.fill-parent {
    width: 100%;
    height: 100%;
}

#metilda-audio-function-btns {
    display: flex;
    justify-content: flex-start;
    margin-bottom: 8px;
}

#metilda-audio-function-btns button {
    margin-right: 24px;
}

#metilda-pitch-art-btn-container {
    display: flex;
    justify-content: flex-end;
}

